force-app/main/default/objects/Student__c/fields/FacultyApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>FacultyApprovalStatus__c</fullName>
    <label>Faculty Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Approval</fullName>
                <default>true</default>
                <label>Awaiting Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>