force-app/main/default/objects/Student__c/validationRules/Date_of_birth.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_birth</fullName>
    <active>true</active>
    <errorConditionFormula>dob__c &gt;= TODAY()</errorConditionFormula>
    <errorDisplayField>dob__c</errorDisplayField>
    <errorMessage>Date of birth must be earlier than today</errorMessage>
</ValidationRule>