force-app/main/default/objects/Student__c/listViews/CEO_Queue_Student.listView-meta.xml
<ListView>
    <fullName>CEO_Queue_Student</fullName>
    <filterScope>Queue</filterScope>
    <label>CEO Queue</label>
    <queue>CEO_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>