force-app/main/default/objects/Student__c/listViews/Course_Queue_Student.listView-meta.xml
<ListView>
    <fullName>Course_Queue_Student</fullName>
    <filterScope>Queue</filterScope>
    <label>Course Queue</label>
    <queue>Course_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>