force-app/main/default/objects/Student__c/listViews/StudentFaculty_Student.listView-meta.xml
<ListView>
    <fullName>StudentFaculty_Student</fullName>
    <filterScope>Queue</filterScope>
    <label>Student Faculty Queue</label>
    <queue>StudentFaculty</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>